force-app/main/default/objects/Visit_Report__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Visit_reports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>