force-app/main/default/objects/Visit_Report__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Who did you meet/primary contact for visit.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Visit Reports</relationshipLabel>
    <relationshipName>Visit_Reports</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>