force-app/main/default/objects/Visit_Report__c/fields/Logged_In_User__c.field-meta.xml
<CustomField>
    <fullName>Logged_In_User__c</fullName>
    <formula>IF(CreatedById =  $User.Id , 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logged In User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>