force-app/main/default/objects/Visit_Report__c/fields/Second_Contact__c.field-meta.xml
<CustomField>
    <fullName>Second_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Add a second person you visited to the report.</inlineHelpText>
    <label>Second Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Visit Reports (Second Contact)</relationshipLabel>
    <relationshipName>Visit_Reports1</relationshipName>
    <type>Lookup</type>
</CustomField>