force-app/main/default/objects/Visit_Report__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Breakfast/Lunch</fullName>
            </value>
            <value>
                <fullName>Lunch and Learn</fullName>
            </value>
            <value>
                <fullName>Mini Event</fullName>
            </value>
            <value>
                <fullName>Big Event</fullName>
            </value>
            <value>
                <fullName>End-User Visit</fullName>
                <label>Customer Visit</label>
            </value>
            <value>
                <fullName>New Contact meeting Q1 2018</fullName>
                <label>New Relationship Q1 2018</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>