force-app/main/default/objects/Visit_Report__c/listViews/All_visist.listView-meta.xml
<ListView>
    <fullName>All_visist</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>greaterThan</operation>
        <value>9/24/2017</value>
    </filters>
    <label>All visits</label>
</ListView>