force-app/main/default/objects/Visit_Report__c/listViews/Coffee_s_For_Closers.listView-meta.xml
<ListView>
    <fullName>Coffee_s_For_Closers</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>Date__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Breakfast/Lunch,Mini Event,Lunch and Learn</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>9/25/2017</value>
    </filters>
    <label>Coffee&apos;s For Closers</label>
</ListView>