force-app/main/default/objects/Visit_Report__c/listViews/MMCO_Sales_Engineer_View.listView-meta.xml
<ListView>
    <fullName>MMCO_Sales_Engineer_View</fullName>
    <booleanFilter>1 or 2 or 3 or 4 or 5 or 6</booleanFilter>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>TDG</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>JBH</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>ESE</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>BRG</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>WSC</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>SPH</value>
    </filters>
    <label>MMCO Sales Engineer View</label>
</ListView>