force-app/main/default/objects/Visit_Report__c/listViews/MMKC_Visit_Reports.listView-meta.xml
<ListView>
    <fullName>MMKC_Visit_Reports</fullName>
    <booleanFilter>1 OR 2 OR 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Goal_of_the_visit__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>Ojile</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>Robison</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>Case</value>
    </filters>
    <label>MMKC Visit Reports</label>
</ListView>