force-app/main/default/objects/Visit_Report__c/listViews/Tulsa_View.listView-meta.xml
<ListView>
    <fullName>Tulsa_View</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Account__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>mhugh,jelli</value>
    </filters>
    <label>OKC View</label>
</ListView>